[package]
name = "vec_like"
version = "0.1.1"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-std"]
use-std = ["nonempty_vec"]

[dependencies]
nonempty_vec = { path = "../nonempty_vec", optional = true }
